--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@aptos-labs/ts-sdk": "^1.33.1",
     "@aptos-labs/wallet-adapter-react": "^3.7.9",
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@langchain/core": "^0.3.41",
+    "@langchain/google-genai": "^0.1.10",
+    "@langchain/langgraph": "^0.2.50",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -27,6 +31,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.23",
+    "@types/uuid": "^10.0.0",
+    "ai": "^4.1.46",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.383.0",
@@ -35,8 +41,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.1",
