--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.33.1",
-    "@aptos-labs/wallet-adapter-react": "^3.7.9",
+    "@aptos-labs/wallet-adapter-react": "^4.1.0",
     "@ducanh2912/next-pwa": "^10.2.9",
     "@langchain/core": "^0.3.41",
     "@langchain/google-genai": "^0.1.10",
@@ -38,7 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.383.0",
-    "move-agent-kit": "file:agent",
+    "move-agent-kit": "^0.2.0",
     "next": "^14.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,7 +48,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.17.24",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
