--- a/agent/package.json
+++ b/agent/package.json
@@ -58,6 +58,7 @@
 		"typescript": "^5.7.3"
 	},
 	"dependencies": {
+		"@econia-labs/emojicoin-sdk": "^0.5.2",
 		"@langchain/anthropic": "^0.3.11",
 		"@langchain/core": "^0.3.29",
 		"@langchain/langgraph": "^0.2.39",
