--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.383.0",
-    "move-agent-kit": "^0.2.0",
+    "move-agent-kit": "file:agent",
     "next": "^14.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,7 +48,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.17.24",
+    "@types/node": "^20.14.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
