--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@langchain/core": "^0.3.41",
     "@langchain/google-genai": "^0.1.10",
     "@langchain/langgraph": "^0.2.50",
+    "@mapbox/node-pre-gyp": "^2.0.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -33,6 +34,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.1",
+    "@roamhq/wrtc": "^0.8.0",
+    "@roamhq/wrtc-darwin-arm64": "^0.8.0",
     "@tanstack/react-query": "^5.51.23",
     "@types/uuid": "^10.0.0",
     "ai": "^4.1.46",
@@ -47,7 +50,8 @@
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "werift": "^0.22.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.1",
